welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:6: error: ';' expected but 'else' found.
                             else {if (diag =6) {if (x==0) {diag2 = 7;x=6;y=diag2-x} else {x=x-1;y=y+1;diag2 = diag} else if (x==0) {x=y -1;diag2 = diag +1;y=diag2-x-1} else {x=x-1;y=y+1;diag2 = diag}}}
                                                                                                                     ^